===== dev =====

====== Breaking API changes ======

  * Lwt_result.catch now takes a function (unit -> 'a t) rather than a promise ('a t) (#965)

====== Additions ======

  * Lwt.reraise an exception raising function which preserves backtraces, recommended for use in Lwt.catch (#963)

====== Build ======

  * Remove unused dependency in dune file. (#969, Kate Deplaix)

  * Fix some compilation warnings for C stubs with OCaml 5. (#976, Antonin Décimo)

===== 5.6.1 =====

====== Fixes ======

  *  Fix null file descriptor being closed when used as redirection for standard fd of child processes. (#957, Antonin Décimo)

===== 5.6.0 =====

====== Installability ======

  * Lwt is now compatible with OCaml 5.00. Lwt is now incompatible with OCaml 4.02. (#925, #923, Kate Deplaix, Patrick Ferris)
  * Lwt is now incompatible with OCaml.4.07 and earlier. (#947, Hannes Mehnert, Tim McGilchrist)
  * Lwt-unix is now compatible with OCaml 5.0.0. (#953, David Allsopp)

====== Additions ======

  * In the Lwt_io module, add `?cloexec:bool` optional arguments to functions that create file descriptors (`pipe`). The `?cloexec` argument is simply forwarded to the wrapped Lwt_unix function. (#872, #911, Antonin Décimo)
  * Add Lwt_result.error, Lwt_result.iter, and Lwt_result.iter_error for consistency with Stdlib. (#927, Antonin Décimo)
  * Lwt_result.bind_error. (#943, Boning Dong)
  * Add ?cloexec parameter to Lwt_io.pipe. (#911, Antonin Décimo)

====== Misc ======

  * On Windows, make Lwt_process.create_process duplicate standard handles given to the child process if they're not inheritable, to mimic the behaviour of Unix.create_process. (#909, Antonin Décimo)
  * Add missing dependency to `cppo` in lwt-react's opam file. (#946, Rizo I)
  * Improve documentation (especially internal links). (#928, Antonin Décimo)
  * Fix documentation of infix choose. (#952, Reynir Björnsson)
  * Only define OCAML_NAME_SPACE for OCaml<5.0.0. (#929, Antonin Décimo)